--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href="//db.onlinewebfonts.com/c/4478f082ff017a0249c57dc022a524f8?family=Quantico-Bold" rel="stylesheet" type="text/css"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Quantico:wght@700&display=swap');
+      </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
