--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Quantico:wght@700&display=swap');
       </style>
+    
+    <link href="https://allfont.net/allfont.css?fonts=quantico-bold-italic" rel="stylesheet" type="text/css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
